--- a/zabbix/mysql.cfg
+++ b/zabbix/mysql.cfg
@@ -1,6 +1,6 @@
 #
 # mysql.cfg
-#
+#Copy this file at /etc/zabbix/zabbix_agentd.d/mysql.cfg
 
 export MYSQL_MASTER_HOST={{DBHOST}}
 export MYSQL_MASTER_USER={{DBUSER}}
