--- a/zabbix/userparameter_diskstats.conf
+++ b/zabbix/userparameter_diskstats.conf
@@ -1,3 +1,4 @@
+#Copy this file at location /etc/zabbix/zabbix_agentd.d/
 UserParameter=custom.vfs.discover_disks,/usr/local/bin/lld-disks.py
 
 UserParameter=custom.vfs.dev.read.ops[*],awk '{print $$1}' /sys/class/block/$1/stat
